# xverif

./: .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  README.zh-CN.md  THIRD_PARTY.md  pyproject.toml  requirements-test.txt  sync_agent_env.py
doc/: REPOSITORY_MAINTAINABILITY_REVIEW_2026-07-16.md  XDEBUG_ACTION_CLI_MCP_REVIEW_2026-07-10_10-09-13.md  XDEBUG_ACTION_REMEDIATION_PLAN_2026-07-10_10-54-25.md  XDEBUG_ACTION_REMEDIATION_VERIFICATION_2026-07-10.md  XDEBUG_AXI_QUERY_TIMING_AND_SCHEMA_PLAN_2026-07-14.md  XDEBUG_AXI_TRANSACTION_RECONSTRUCTION_AND_TEST_PLAN_2026-07-13.md  XDEBUG_P2_APB_STREAM_ACTION_CATALOG_PLAN_2026-07-14.md  XDEBUG_SCHEMA_AGENT_USABILITY_TASK_2026-07-14.md  XDEBUG_XDTE_FEEDBACK_OPTIMIZATION_RECORD_2026-07-13.md  XDEBUG_XDTE_FEEDBACK_REPAIR_PLAN_2026-07-13.md  XDEBUG_XDTE_RELEASE_CLOSURE_PLAN_2026-07-13.md  XVERIF_LEGACY_TEST_INVENTORY_2026-07-10.yaml  XVERIF_SKILL_INFORMATION_ARCHITECTURE_PLAN.md  XVERIF_TEST_ARCHITECTURE_MIGRATION_PLAN_2026-07-10_23-36-25.md  XVERIF_TEST_ARCHITECTURE_MIGRATION_VERIFICATION_2026-07-11_02-16-19.md  signal_rc_syntax.md  xdebug_action_ai_usability_fix_plan_2026-07-08.md  xdebug_action_entry_review_2026-07-08.md  xdebug_action_entry_review_fresh_agent_2026-07-08.md  xdebug_action_return_replay_fix_report_2026-07-09.md  xdebug_action_return_replay_matrix_2026-07-09.md  xdebug_action_return_rereview_2026-07-10.md  xdebug_analysis_cache_phase0_baseline_2026-07-16.md  xdebug_bad_param_feedback_review_2026-07-08.md  xdebug_error_output_expression_unification_plan_2026-07-09.md  xdebug_mcp_action_return_common_issues_2026-07-09.md  xdebug_mcp_action_return_review_2026-07-09.md  xdebug_protocol_stream_cache_optimization_plan_2026-07-16.md  xverif_skill_req_rsp_schema_audit_2026-07-07.md  xverif_skill_schema_consistency_report_2026-07-07.md  xverif_skill_split_plan_2026-07-09.md
docs/adr/: 0001-test-catalog-as-source-of-truth.md  0002-orthogonal-test-taxonomy.md  0003-suite-level-test-catalog-entries.md  0004-content-addressed-database-fixtures.md  0005-separate-fixture-preparation-from-test-execution.md  0006-repository-local-fixture-cache.md  0007-separate-build-clean-from-fixture-clean.md  0008-central-schema-validated-test-catalog.md  0009-pytest-plugin-as-the-test-orchestrator.md  0010-custom-pytest-items-for-external-suites.md  0011-execution-boundary-test-levels.md  0012-distinguish-test-failures-from-environment-errors.md  0013-standard-test-gates-and-fixture-validation.md  0014-change-driven-fixture-validation.md  0015-xdist-with-resource-aware-scheduling.md  0016-conservative-change-impact-selection.md  0017-versioned-json-test-execution-reports.md  0018-no-automatic-test-retries.md  (+10 more)
regression/: run_xdebug_regression.sh
skills/x-npi/: SKILL.md
testinfra/: __init__.py  catalog.v1.yaml  dependencies.v1.json  fixtures.v1.yaml
tools/: check_test_environment.py  create_python_environment.py  xbit  xcov  xentry  xloc  xsva  xverif-loop-client  xverif-loop-server  xwaveform
xberif/: Makefile  README.md  pyproject.toml
xberif/skill/: SKILL.md
xberif/tests/: test_bt_flow.py
xberif/xberif/: agent.py  cards.py  cli.py  errors.py  hooks.py  init_flow.py  io.py  manifest.py  paths.py  prompt.py  query.py  templates.py  topics.py
xberif/xberif/config/: __init__.py
xbit/: Makefile  README.md  pyproject.toml  xbit
xbit/skill/: SKILL.md
xbit/src/xbit/: __init__.py  cli.py  errors.py  format.py  ops.py
xbit/src/xbit/agent/: __init__.py  stdio.py
xbit/tests/: test_xbit.py
xcov/: Makefile  README.md  pyproject.toml
xcov/docs/: action-xout-examples.md  coverage-api-capability.md
xcov/skill/: SKILL.md
xcov/skill/agents/: openai.yaml
xcov/tests/: test_xcov.py
xcov/xcov/: __init__.py  actions.py  backend.py  cli.py  errors.py  logging.py  protocol.py  query.py  schemas.py  session.py
xdebug/: Makefile  README.md  help.txt
xdebug_mcp/: README.md
xeda_runner/: xeda_runner.py
xentry/: Makefile  README.md
xloc/: Makefile  Makefile.fixture  README.md
xsva/: Makefile  README.md  pyproject.toml  xsva_design_spec.md
xverif_mcp/: README.md  pyproject.toml
xverif_mcp/src/xverif_loop/: logging.py  wrapper.py  xdebug_errors.py
xverif_mcp/src/xverif_loop/sessions/: capabilities.py  loop_session.py  session_manager.py
xverif_mcp/src/xverif_mcp/: config.py  runner.py  schema_projection.py  server.py  tool_policy.py  xdebug_errors.py
xverif_mcp/src/xverif_mcp/adapters/: xberif.py  xbit.py  xcov.py  xdebug.py  xentry.py  xloc.py  xsva.py
xverif_mcp/src/xverif_mcp/sessions/: launchers.py  loop_session.py  session_manager.py
xverif_mcp/tests/: test_action_smoke_script.py  test_backend_wiring.py  test_direct_output_formats.py  test_full_action_smoke.py  test_import_adapters.py  test_loop_session.py  test_loop_wrapper_uds.py  test_mcp_sdk_smoke.py  test_runtime_package_smoke.py  test_schema_projection.py  test_session_capabilities.py  test_shared_loop_layer.py  test_stdio_loop_session_lifecycle.py  test_xdebug_session_action_guard.py
xverif_mcp/tools/: test_actions.py
xwaveform/: Makefile  pyproject.toml
xwaveform/src/xwaveform/: __init__.py  cli.py  loader.py  render.py
xwaveform/tests/: test_xwaveform.py  test_xwaveform_cli_smoke.py
(+1171 files in other folders)
