[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "xbit"
version = "0.1.0"
description = "Deterministic bit/value/expression calculator for verification debug agents"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
xbit = "xbit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
