[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "xcov"
version = "0.1.0"
description = "AI-oriented VCS/Verdi coverage database query engine"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
xcov = "xcov.cli:main"

[tool.setuptools.packages.find]
where = ["."]
