[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "xwaveform"
version = "0.1.0"
description = "Fast xdebug list.export waveform renderer"
requires-python = ">=3.10"
dependencies = ["numpy", "Pillow"]

[project.optional-dependencies]
plot = ["matplotlib"]

[project.scripts]
xwaveform = "xwaveform.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
